Fix image heights on smaller screens

--- a/docroot/themes/custom/bos311bootstrap/scss/style.scss
+++ b/docroot/themes/custom/bos311bootstrap/scss/style.scss
@@ -21,8 +21,17 @@
   display: block;
 }
 
+@media (min-width: 576px) {
+  .card-img-top {
+    height: 200px;
+  }
+}
+@media (min-width: 768px) {
+  .card-img-top {
+    height: 280px;
+  }
+}
 .card-img-top {
   width: 100%;
-  height: 15vw;
   object-fit: cover;
 }
